workspaces/backend/manifests/kustomize/options/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: nb-backend.workspace-controller-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
