workspaces/backend/manifests/kustomize/options/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /workspaces/api/
    rewrite:
      uri: /api/
    route:
    - destination:
        host: nb-backend.workspace-controller-system.svc.cluster.local
        port:
          number: 4000
